Fix (issue #15) to remove the unwanted whitespace after the footer

--- a/css/selion.css
+++ b/css/selion.css
@@ -3,11 +3,14 @@
 
 html {
   position: relative;
-  min-height: 100%;
+  height: 100%;
 }
 
 body {
+  position: absolute;
   color: #5a5a5a;
+  min-height: 100%;
+  min-width: 100%;
 }
 
 h1 {
@@ -86,6 +89,7 @@ a:hover {
 
   .selion-side-menu {
     padding-top: 50px;
+    margin: 0px 0px 80px 0px !important;
     font-size: smaller;
   }
 
